--- a/app/src/main/res/layout/fragment_present.xml
+++ b/app/src/main/res/layout/fragment_present.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.gallery.GalleryFragment">
+    tools:context=".ui.PresentFragment">
 
     <TextView
-        android:id="@+id/text_gallery"
+        android:id="@+id/text_present"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/android_icon"
-        app:layout_constraintBottom_toTopOf="@+id/text_gallery"
+        app:layout_constraintBottom_toTopOf="@+id/text_present"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
