--- a/app/src/main/res/layout/activity_guest_form.xml
+++ b/app/src/main/res/layout/activity_guest_form.xml
@@ -4,6 +4,52 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="16dp"
     tools:context=".GuestFormActivity">
+
+    <TextView
+        android:id="@+id/guest_name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:text="Nome"/>
+
+    <EditText
+        android:id="@+id/edit_name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/guest_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:hint="Insira seu nome"/>
+
+    <TextView
+        android:id="@+id/text_present"
+        android:layout_width="0dp"
+        android:layout_marginTop="16dp"
+        android:text="Presença"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/edit_name"
+        />
+
+    <RadioButton
+        android:id="@+id/present_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Presente"
+        app:layout_constraintTop_toBottomOf="@id/text_present"
+        app:layout_constraintStart_toStartOf="parent"/>
+    <RadioButton
+        android:id="@+id/absent_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ausente"
+        app:layout_constraintTop_toBottomOf="@id/present_button"
+        app:layout_constraintStart_toStartOf="parent"
+/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
