--- a/app/src/main/res/layout/activity_guest_form.xml
+++ b/app/src/main/res/layout/activity_guest_form.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp"
-    tools:context=".GuestFormActivity">
+    android:padding="16dp"
+    tools:context=".view.GuestFormActivity">
 
     <TextView
         android:id="@+id/guest_name"
@@ -36,20 +36,37 @@
         app:layout_constraintTop_toBottomOf="@id/edit_name"
         />
 
-    <RadioButton
-        android:id="@+id/present_button"
+    <RadioGroup
+        android:id="@+id/radio_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Presente"
-        app:layout_constraintTop_toBottomOf="@id/text_present"
-        app:layout_constraintStart_toStartOf="parent"/>
-    <RadioButton
-        android:id="@+id/absent_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Ausente"
-        app:layout_constraintTop_toBottomOf="@id/present_button"
         app:layout_constraintStart_toStartOf="parent"
-/>
+        app:layout_constraintTop_toBottomOf="@id/text_present">
+
+        <RadioButton
+            android:id="@+id/present_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Presente"
+            app:layout_constraintTop_toBottomOf="@id/text_present"
+            app:layout_constraintStart_toStartOf="parent"/>
+        <RadioButton
+            android:id="@+id/absent_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Ausente"
+            app:layout_constraintTop_toBottomOf="@id/present_button"
+            app:layout_constraintStart_toStartOf="parent"/>
+    </RadioGroup>
+
+    <Button
+        android:id="@+id/button_save"
+        app:layout_constraintTop_toBottomOf="@id/radio_group"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="wrap_content"
+        android:text="SALVAR"
+        android:layout_height="wrap_content"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
